parser_files/Parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
main' -> . main [ # ]
## Transitions:
-- On LET shift to state 1
-- On req_list shift to state 134
-- On req shift to state 136
-- On main shift to state 138
## Reductions:

State 1:
## Known stack suffix:
## LET
## LR(1) items:
req -> LET . ID EQ expr [ LET EOF ]
req -> LET . REC ID EQ expr [ LET EOF ]
req -> LET . ID sugar_func_decl [ LET EOF ]
req -> LET . REC ID sugar_func_decl [ LET EOF ]
## Transitions:
-- On REC shift to state 2
-- On ID shift to state 130
## Reductions:

State 2:
## Known stack suffix:
## LET REC
## LR(1) items:
req -> LET REC . ID EQ expr [ LET EOF ]
req -> LET REC . ID sugar_func_decl [ LET EOF ]
## Transitions:
-- On ID shift to state 3
## Reductions:

State 3:
## Known stack suffix:
## LET REC ID
## LR(1) items:
req -> LET REC ID . EQ expr [ LET EOF ]
req -> LET REC ID . sugar_func_decl [ LET EOF ]
## Transitions:
-- On ID shift to state 4
-- On EQ shift to state 127
-- On sugar_func_decl shift to state 129
## Reductions:

State 4:
## Known stack suffix:
## ID
## LR(1) items:
sugar_func_decl -> ID . EQ expr [ LET IN EOF ]
sugar_func_decl -> ID . sugar_func_decl [ LET IN EOF ]
## Transitions:
-- On ID shift to state 4
-- On EQ shift to state 5
-- On sugar_func_decl shift to state 126
## Reductions:

State 5:
## Known stack suffix:
## ID EQ
## LR(1) items:
sugar_func_decl -> ID EQ . expr [ LET IN EOF ]
## Transitions:
-- On TAIL shift to state 6
-- On SUB shift to state 7
-- On STRING shift to state 8
-- On PRINT shift to state 9
-- On NOT shift to state 10
-- On NEG shift to state 11
-- On L_SQ shift to state 12
-- On L_PAR shift to state 14
-- On LET shift to state 17
-- On INT shift to state 21
-- On IF shift to state 22
-- On ID shift to state 23
-- On HEAD shift to state 24
-- On FUN shift to state 25
-- On BOOL shift to state 28
-- On simple_expr shift to state 29
-- On expr shift to state 125
-- On app_expr shift to state 65
## Reductions:

State 6:
## Known stack suffix:
## TAIL
## LR(1) items:
simple_expr -> TAIL . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> TAIL

State 7:
## Known stack suffix:
## SUB
## LR(1) items:
expr -> SUB . expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
## Transitions:
-- On TAIL shift to state 6
-- On SUB shift to state 7
-- On STRING shift to state 8
-- On PRINT shift to state 9
-- On NOT shift to state 10
-- On NEG shift to state 11
-- On L_SQ shift to state 12
-- On L_PAR shift to state 14
-- On LET shift to state 17
-- On INT shift to state 21
-- On IF shift to state 22
-- On ID shift to state 23
-- On HEAD shift to state 24
-- On FUN shift to state 25
-- On BOOL shift to state 28
-- On simple_expr shift to state 29
-- On expr shift to state 86
-- On app_expr shift to state 65
## Reductions:

State 8:
## Known stack suffix:
## STRING
## LR(1) items:
simple_expr -> STRING . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> STRING

State 9:
## Known stack suffix:
## PRINT
## LR(1) items:
simple_expr -> PRINT . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> PRINT

State 10:
## Known stack suffix:
## NOT
## LR(1) items:
simple_expr -> NOT . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> NOT

State 11:
## Known stack suffix:
## NEG
## LR(1) items:
simple_expr -> NEG . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> NEG

State 12:
## Known stack suffix:
## L_SQ
## LR(1) items:
simple_expr -> L_SQ . R_SQ [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_SQ . list_builder [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
-- On TAIL shift to state 6
-- On STRING shift to state 8
-- On R_SQ shift to state 13
-- On PRINT shift to state 9
-- On NOT shift to state 10
-- On NEG shift to state 11
-- On L_SQ shift to state 12
-- On L_PAR shift to state 14
-- On INT shift to state 21
-- On ID shift to state 23
-- On HEAD shift to state 24
-- On BOOL shift to state 28
-- On simple_expr shift to state 120
-- On list_builder shift to state 124
## Reductions:

State 13:
## Known stack suffix:
## L_SQ R_SQ
## LR(1) items:
simple_expr -> L_SQ R_SQ . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> L_SQ R_SQ

State 14:
## Known stack suffix:
## L_PAR
## LR(1) items:
simple_expr -> L_PAR . ADD R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . SUB R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . MUL R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . DIV R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . MOD R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . AND R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . OR R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . EQ R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . NEQ R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . LT R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . GT R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . LEQ R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . GEQ R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . CONCAT R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . CAT R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . APPEND R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
simple_expr -> L_PAR . expr R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
-- On TAIL shift to state 6
-- On SUB shift to state 15
-- On STRING shift to state 8
-- On R_PAR shift to state 87
-- On PRINT shift to state 9
-- On OR shift to state 88
-- On NOT shift to state 10
-- On NEQ shift to state 90
-- On NEG shift to state 11
-- On MUL shift to state 92
-- On MOD shift to state 94
-- On L_SQ shift to state 12
-- On L_PAR shift to state 14
-- On LT shift to state 96
-- On LET shift to state 17
-- On LEQ shift to state 98
-- On INT shift to state 21
-- On IF shift to state 22
-- On ID shift to state 23
-- On HEAD shift to state 24
-- On GT shift to state 100
-- On GEQ shift to state 102
-- On FUN shift to state 25
-- On EQ shift to state 104
-- On DIV shift to state 106
-- On CONCAT shift to state 108
-- On CAT shift to state 110
-- On BOOL shift to state 28
-- On APPEND shift to state 112
-- On AND shift to state 114
-- On ADD shift to state 116
-- On simple_expr shift to state 29
-- On expr shift to state 118
-- On app_expr shift to state 65
## Reductions:

State 15:
## Known stack suffix:
## L_PAR SUB
## LR(1) items:
expr -> SUB . expr [ SEMICOLON R_PAR ]
simple_expr -> L_PAR SUB . R_PAR [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
-- On TAIL shift to state 6
-- On SUB shift to state 7
-- On STRING shift to state 8
-- On R_PAR shift to state 16
-- On PRINT shift to state 9
-- On NOT shift to state 10
-- On NEG shift to state 11
-- On L_SQ shift to state 12
-- On L_PAR shift to state 14
-- On LET shift to state 17
-- On INT shift to state 21
-- On IF shift to state 22
-- On ID shift to state 23
-- On HEAD shift to state 24
-- On FUN shift to state 25
-- On BOOL shift to state 28
-- On simple_expr shift to state 29
-- On expr shift to state 86
-- On app_expr shift to state 65
## Reductions:

State 16:
## Known stack suffix:
## L_PAR SUB R_PAR
## LR(1) items:
simple_expr -> L_PAR SUB R_PAR . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> L_PAR SUB R_PAR

State 17:
## Known stack suffix:
## LET
## LR(1) items:
expr -> LET . ID EQ expr IN expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
expr -> LET . REC ID EQ expr IN expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
expr -> LET . ID sugar_func_decl IN expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
expr -> LET . REC ID sugar_func_decl IN expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
## Transitions:
-- On REC shift to state 18
-- On ID shift to state 78
## Reductions:

State 18:
## Known stack suffix:
## LET REC
## LR(1) items:
expr -> LET REC . ID EQ expr IN expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
expr -> LET REC . ID sugar_func_decl IN expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
## Transitions:
-- On ID shift to state 19
## Reductions:

State 19:
## Known stack suffix:
## LET REC ID
## LR(1) items:
expr -> LET REC ID . EQ expr IN expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
expr -> LET REC ID . sugar_func_decl IN expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
## Transitions:
-- On ID shift to state 4
-- On EQ shift to state 20
-- On sugar_func_decl shift to state 75
## Reductions:

State 20:
## Known stack suffix:
## LET REC ID EQ
## LR(1) items:
expr -> LET REC ID EQ . expr IN expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
## Transitions:
-- On TAIL shift to state 6
-- On SUB shift to state 7
-- On STRING shift to state 8
-- On PRINT shift to state 9
-- On NOT shift to state 10
-- On NEG shift to state 11
-- On L_SQ shift to state 12
-- On L_PAR shift to state 14
-- On LET shift to state 17
-- On INT shift to state 21
-- On IF shift to state 22
-- On ID shift to state 23
-- On HEAD shift to state 24
-- On FUN shift to state 25
-- On BOOL shift to state 28
-- On simple_expr shift to state 29
-- On expr shift to state 72
-- On app_expr shift to state 65
## Reductions:

State 21:
## Known stack suffix:
## INT
## LR(1) items:
simple_expr -> INT . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> INT

State 22:
## Known stack suffix:
## IF
## LR(1) items:
expr -> IF . expr THEN expr ELSE expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
## Transitions:
-- On TAIL shift to state 6
-- On SUB shift to state 7
-- On STRING shift to state 8
-- On PRINT shift to state 9
-- On NOT shift to state 10
-- On NEG shift to state 11
-- On L_SQ shift to state 12
-- On L_PAR shift to state 14
-- On LET shift to state 17
-- On INT shift to state 21
-- On IF shift to state 22
-- On ID shift to state 23
-- On HEAD shift to state 24
-- On FUN shift to state 25
-- On BOOL shift to state 28
-- On simple_expr shift to state 29
-- On expr shift to state 67
-- On app_expr shift to state 65
## Reductions:

State 23:
## Known stack suffix:
## ID
## LR(1) items:
simple_expr -> ID . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> ID

State 24:
## Known stack suffix:
## HEAD
## LR(1) items:
simple_expr -> HEAD . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> HEAD

State 25:
## Known stack suffix:
## FUN
## LR(1) items:
expr -> FUN . ID ARROW expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
## Transitions:
-- On ID shift to state 26
## Reductions:

State 26:
## Known stack suffix:
## FUN ID
## LR(1) items:
expr -> FUN ID . ARROW expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
## Transitions:
-- On ARROW shift to state 27
## Reductions:

State 27:
## Known stack suffix:
## FUN ID ARROW
## LR(1) items:
expr -> FUN ID ARROW . expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
## Transitions:
-- On TAIL shift to state 6
-- On SUB shift to state 7
-- On STRING shift to state 8
-- On PRINT shift to state 9
-- On NOT shift to state 10
-- On NEG shift to state 11
-- On L_SQ shift to state 12
-- On L_PAR shift to state 14
-- On LET shift to state 17
-- On INT shift to state 21
-- On IF shift to state 22
-- On ID shift to state 23
-- On HEAD shift to state 24
-- On FUN shift to state 25
-- On BOOL shift to state 28
-- On simple_expr shift to state 29
-- On expr shift to state 62
-- On app_expr shift to state 65
## Reductions:

State 28:
## Known stack suffix:
## BOOL
## LR(1) items:
simple_expr -> BOOL . [ THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD ]
## Transitions:
## Reductions:
-- On THEN TAIL SUB STRING SEMICOLON R_SQ R_PAR PRINT OR NOT NEQ NEG MUL MOD L_SQ L_PAR LT LET LEQ INT IN ID HEAD GT GEQ EQ EOF ELSE DIV CONCAT CAT BOOL APPEND AND ADD
--   reduce production simple_expr -> BOOL

State 29:
## Known stack suffix:
## simple_expr
## LR(1) items:
app_expr -> simple_expr . [ TAIL STRING PRINT NOT NEG L_SQ L_PAR INT ID HEAD BOOL ]
expr -> simple_expr . [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
expr -> simple_expr . ADD simple_expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
expr -> simple_expr . SUB simple_expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
expr -> simple_expr . MUL simple_expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
expr -> simple_expr . DIV simple_expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
expr -> simple_expr . MOD simple_expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
expr -> simple_expr . AND simple_expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
expr -> simple_expr . OR simple_expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
expr -> simple_expr . EQ simple_expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
expr -> simple_expr . NEQ simple_expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
expr -> simple_expr . LT simple_expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
expr -> simple_expr . GT simple_expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
expr -> simple_expr . LEQ simple_expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
expr -> simple_expr . GEQ simple_expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
expr -> simple_expr . CONCAT simple_expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
expr -> simple_expr . CAT simple_expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
expr -> simple_expr . APPEND simple_expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
## Transitions:
-- On SUB shift to state 30
-- On OR shift to state 32
-- On NEQ shift to state 34
-- On MUL shift to state 36
-- On MOD shift to state 38
-- On LT shift to state 40
-- On LEQ shift to state 42
-- On GT shift to state 44
-- On GEQ shift to state 46
-- On EQ shift to state 48
-- On DIV shift to state 50
-- On CONCAT shift to state 52
-- On CAT shift to state 54
-- On APPEND shift to state 56
-- On AND shift to state 58
-- On ADD shift to state 60
## Reductions:
-- On TAIL STRING PRINT NOT NEG L_SQ L_PAR INT ID HEAD BOOL
--   reduce production app_expr -> simple_expr
-- On THEN SEMICOLON R_PAR LET IN EOF ELSE
--   reduce production expr -> simple_expr

State 30:
## Known stack suffix:
## simple_expr SUB
## LR(1) items:
expr -> simple_expr SUB . simple_expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
## Transitions:
-- On TAIL shift to state 6
-- On STRING shift to state 8
-- On PRINT shift to state 9
-- On NOT shift to state 10
-- On NEG shift to state 11
-- On L_SQ shift to state 12
-- On L_PAR shift to state 14
-- On INT shift to state 21
-- On ID shift to state 23
-- On HEAD shift to state 24
-- On BOOL shift to state 28
-- On simple_expr shift to state 31
## Reductions:

State 31:
## Known stack suffix:
## simple_expr SUB simple_expr
## LR(1) items:
expr -> simple_expr SUB simple_expr . [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
## Transitions:
## Reductions:
-- On THEN SEMICOLON R_PAR LET IN EOF ELSE
--   reduce production expr -> simple_expr SUB simple_expr

State 32:
## Known stack suffix:
## simple_expr OR
## LR(1) items:
expr -> simple_expr OR . simple_expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
## Transitions:
-- On TAIL shift to state 6
-- On STRING shift to state 8
-- On PRINT shift to state 9
-- On NOT shift to state 10
-- On NEG shift to state 11
-- On L_SQ shift to state 12
-- On L_PAR shift to state 14
-- On INT shift to state 21
-- On ID shift to state 23
-- On HEAD shift to state 24
-- On BOOL shift to state 28
-- On simple_expr shift to state 33
## Reductions:

State 33:
## Known stack suffix:
## simple_expr OR simple_expr
## LR(1) items:
expr -> simple_expr OR simple_expr . [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
## Transitions:
## Reductions:
-- On THEN SEMICOLON R_PAR LET IN EOF ELSE
--   reduce production expr -> simple_expr OR simple_expr

State 34:
## Known stack suffix:
## simple_expr NEQ
## LR(1) items:
expr -> simple_expr NEQ . simple_expr [ THEN SEMICOLON R_PAR LET IN EOF ELSE ]
## Transitions:
-- On TAIL shift to state 6
-- On STRING shift to state 8
-- On PRINT shift to state 9
-- On NOT shift to state 10
-- On NEG shift to state 11
-- On L_SQ shift to state 12
-- On L_PAR shift to state 14
-- On INT shift to state 21
-- On ID shift to state 23
-- On HEAD shift to state 24
-- On BOOL shift to state 28
-- On simple_expr shift to state 35
## Reductions:
